--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         />
         <link rel="apple-touch-icon" href="./apple-icon.png" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+        <script src="https://kit.fontawesome.com/3eb667d36f.js" crossorigin="anonymous"></script> 
         <title>university-sample-project</title>
     </head>
   
